# dood-rs

./: Cargo.toml  README.md
notes/: ecs.rs  notes.txt  rpas.txt
shaders/: fragment.glsl  vertex.glsl
src/: action.rs  brain.rs  camera.rs  chunk.rs  chunk_coord.rs  chunk_loc.rs  chunks.rs  config.rs  dir.rs  dist.rs  dood.rs  entities.rs  entity.rs  food.rs  fov.rs  grid.rs  has_loc.rs  indices.rs  input.rs  loc.rs  loc_map.rs  main.rs  path.rs  paths.rs  pixset.rs  renderable.rs  scratch.rs  screen_size.rs  shaders.rs  size.rs  square.rs  state.rs  terrain.rs  updatable.rs  utils.rs  wall.rs  window_loc.rs  world.rs  world_coord.rs
src/cascadecs/: brain.rs  brain_component.rs  brain_process.rs  components.rs  denormalized_hash_map.rs  entity.rs  event.rs  food_component.rs  fov_component.rs  fov_process.rs  hunger_component.rs  hunger_process.rs  impassable_component.rs  mod.rs  movement_process.rs  opaque_component.rs  path_component.rs  position_component.rs  position_process.rs  process.rs  processes.rs  render_component.rs  render_process.rs
src/render/: camera.rs  flags.rs  fov.rs  mod.rs  scratch.rs  shaders.rs  vertex.rs
