[package]
name = "dood-rs"
version = "0.0.1"
authors = ["Dave O <davidobrite@gmail.com>"]

[dependencies]
image = "*"
fps_counter = "*"
piston = "*"
piston_window = "*"
piston-gfx_texture = "*"
hprof = "*"
gfx = "*"
gfx_device_gl = "*"
camera_controllers = "*"
nalgebra = "*"
bitflags = "*"
rand = "*"
